src/objects/Shift_Hour__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Name__c</fullName>
        <label>Shift Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Shift Hour</label>
</CustomObject>